--- a/Cooleaf/UI/Main.storyboard
+++ b/Cooleaf/UI/Main.storyboard
@@ -312,10 +312,10 @@
                                                             <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t7c-13-HnL">
                                                                 <rect key="frame" x="0.0" y="80" width="120" height="40"/>
                                                                 <subviews>
-                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#Advantage" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GYA-GM-1bg">
-                                                                        <rect key="frame" x="8" y="10" width="104" height="21"/>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GYA-GM-1bg">
+                                                                        <rect key="frame" x="8" y="10" width="104" height="0.0"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
                                                                 </subviews>
@@ -381,7 +381,7 @@
                                     <outlet property="groupCollectionView" destination="pRg-LI-J53" id="ybu-No-H6P"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="eventCell" rowHeight="577" id="x0a-ud-4q7" customClass="CLEventCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="eventCell" rowHeight="502" id="x0a-ud-4q7" customClass="CLEventCell">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="x0a-ud-4q7" id="kXl-eY-A5V">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -405,7 +405,7 @@
                                             </constraints>
                                         </view>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pTG-GY-kE4">
-                                            <rect key="frame" x="546" y="426" width="30" height="142.5"/>
+                                            <rect key="frame" x="546" y="426" width="30" height="67.5"/>
                                             <state key="normal" title="Join">
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
@@ -414,7 +414,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hOS-2g-nm5">
-                                            <rect key="frame" x="470" y="426" width="68" height="142.5"/>
+                                            <rect key="frame" x="470" y="426" width="68" height="67.5"/>
                                             <state key="normal" title="Comment">
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
@@ -461,43 +461,28 @@
                                     <outlet property="eventView" destination="aVk-Ro-7Gj" id="LLB-Jq-EKV"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="informationCell" rowHeight="138" id="ggr-LB-Iak" customClass="CLInformationTableViewcell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="informationCell" rowHeight="213" id="ggr-LB-Iak" customClass="CLInformationTableViewcell">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ggr-LB-Iak" id="oB3-en-T4e">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gKs-k0-Wiv">
-                                            <rect key="frame" x="8" y="36" width="66" height="65"/>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F5X-gB-Puk">
-                                            <rect key="frame" x="114" y="58" width="42" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NeS-Or-RaV">
+                                            <rect key="frame" x="8" y="8" width="592" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottomMargin" secondItem="F5X-gB-Puk" secondAttribute="bottom" constant="51" id="1pC-Ap-gjq"/>
-                                        <constraint firstItem="gKs-k0-Wiv" firstAttribute="top" secondItem="oB3-en-T4e" secondAttribute="topMargin" constant="28" id="3QW-Cw-OoM"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="gKs-k0-Wiv" secondAttribute="trailing" constant="518" id="JB1-m2-N2j"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="F5X-gB-Puk" secondAttribute="trailing" constant="437" id="PY3-dm-TAb"/>
-                                        <constraint firstItem="F5X-gB-Puk" firstAttribute="leading" secondItem="oB3-en-T4e" secondAttribute="leadingMargin" constant="105" id="VPD-Ni-RNL"/>
-                                        <constraint firstAttribute="centerY" secondItem="gKs-k0-Wiv" secondAttribute="centerY" constant="0.25" id="XPR-xR-mlm"/>
-                                        <constraint firstItem="gKs-k0-Wiv" firstAttribute="leading" secondItem="oB3-en-T4e" secondAttribute="leadingMargin" id="ZCO-T4-4dw"/>
-                                        <constraint firstItem="F5X-gB-Puk" firstAttribute="top" secondItem="oB3-en-T4e" secondAttribute="topMargin" constant="50" id="aJP-sH-bUp"/>
-                                        <constraint firstAttribute="centerY" secondItem="F5X-gB-Puk" secondAttribute="centerY" constant="0.5" id="kPN-kk-aIC"/>
-                                        <constraint firstItem="F5X-gB-Puk" firstAttribute="leading" secondItem="gKs-k0-Wiv" secondAttribute="trailing" constant="40" id="sFl-t4-X52"/>
+                                        <constraint firstItem="NeS-Or-RaV" firstAttribute="top" secondItem="oB3-en-T4e" secondAttribute="topMargin" id="mx8-lt-miV"/>
+                                        <constraint firstItem="NeS-Or-RaV" firstAttribute="leading" secondItem="oB3-en-T4e" secondAttribute="leadingMargin" id="n7C-i4-u8F"/>
+                                        <constraint firstAttribute="trailing" secondItem="NeS-Or-RaV" secondAttribute="trailing" id="xnK-DB-Ks4"/>
                                     </constraints>
-                                    <variation key="default">
-                                        <mask key="constraints">
-                                            <exclude reference="PY3-dm-TAb"/>
-                                            <exclude reference="VPD-Ni-RNL"/>
-                                        </mask>
-                                    </variation>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.94509803920000002" green="0.76862745099999996" blue="0.058823529409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
-                                    <outlet property="tagLabel" destination="F5X-gB-Puk" id="D1A-Dx-R4b"/>
+                                    <outlet property="tagLabel" destination="NeS-Or-RaV" id="pEI-Ma-zxe"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
